# tmux-web

./: .gitignore  Cargo.toml  README.md  README_CN.md  build.rs  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
src/: auth.rs  main.js  main.rs  pty.rs  static_assets.rs  tmux.rs
styles/: styles.css
web-src/: index.html  tsconfig.json
web-src/src/: App.tsx  actions.ts  api.ts  browser.ts  commands.ts  control.ts  keyboard.ts  main.tsx  state.ts
web-src/src/components/: CommandBar.tsx  CommandPanel.tsx  LoginView.tsx  PaneListOverlay.tsx  StickyKeys.tsx  TabBar.tsx  TerminalStage.tsx  Workspace.tsx
web-src/src/terminal/: controller.ts  selection.ts  themes.ts  touch.ts  trzsz.ts
web-src/styles/: styles.css  theme.css
