[package]
name = "tmux-web"
version = "1.0.0"
edition = "2021"
license = "ISC"
description = "A small web gateway for remotely accessing tmux sessions."

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.4", features = ["ws", "json"] }
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
portable-pty = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.40", features = ["macros", "net", "process", "rt-multi-thread", "sync"] }
tower-http = { version = "0.6.4", features = ["fs"] }
uuid = { version = "1.4", features = ["v4", "serde"] }

[build-dependencies]
flate2 = "1.1"

[dev-dependencies]
tempfile = "3.10"
