[package]
name = "tmux-web"
version = "1.0.3"
edition = "2021"
license = "ISC"
description = "A small web gateway for remotely accessing tmux sessions."

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.4", default-features = false, features = ["http1", "json", "query", "tokio", "ws"] }
clap = { version = "4.5", default-features = false, features = ["std", "derive", "env", "help", "usage", "error-context"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
portable-pty = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.40", features = ["fs", "macros", "net", "process", "rt-multi-thread", "sync"] }
uuid = { version = "1.4", features = ["v4", "serde"] }

[build-dependencies]
flate2 = "1.1"

[dev-dependencies]
tempfile = "3.10"
